[options]
packages = find_namespace:
include_package_data = True
package_dir =
    =src
zip_safe = False

mkdocs.plugins =
    frkl-docgen = kiara.doc:FrklDocumentationPlugin

[options.packages.find]
where = src
exclude =
    tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = sdist, bdist_wheel

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
deps =
    -e{toxinidir}[dev_testing,all]
install_command = pip install {opts} {packages}
commands =
    pip install -U pip
    py.test --basetemp={envtmpdir}

[coverage:run]
branch = True
source = kiara
omit =
    src/kiara/doc/*

[coverage:paths]
source =
    src/
    */site-packages/
relative_files = true

[coverage:report]
exclude_lines =
    pragma: no cover
   
    def __repr__
    if self\.debug
   
    raise AssertionError
    raise NotImplementedError
   
    if 0:
    if __name__ == .__main__.:
    if typing.TYPE_CHECKING:
    if kiara is None:



[mypy]
mypy_path =
    src/
namespace_packages = false
plugins =
    pydantic.mypy

[mypy-airium.*]
ignore_missing_imports = true

[mypy-alembic.*]
ignore_missing_imports = true

[mypy-appdirs]
ignore_missing_imports = true

[mypy-asciinet.*]
ignore_missing_imports = true

[mypy-black]
ignore_missing_imports = true

[mypy-boltons.*]
ignore_missing_imports = true

[mypy-click]
ignore_missing_imports = true

[mypy-deepdiff]
ignore_missing_imports = true

[mypy-devtools]
ignore_missing_imports = true

[mypy-distro]
ignore_missing_imports = true

[mypy-dpath.*]
ignore_missing_imports = true

[mypy-docstring_parser.*]
ignore_missing_imports = true

[mypy-fastapi.*]
ignore_missing_imports = true

[mypy-filetype]
ignore_missing_imports = true

[mypy-httpx.*]
ignore_missing_imports = true

[mypy-humanfriendly]
ignore_missing_imports = true

[mypy-hypercorn.*]
ignore_missing_imports = true

[mypy-ipydagred3]
ignore_missing_imports = true

[mypy-jinja2]
ignore_missing_imports = true

[mypy-kiara_modules.*]
ignore_missing_imports = true

[mypy-kiara_streamlit.*]
ignore_missing_imports = true

[mypy-kiara.doc.mkdocstrings.handler.*]
ignore_missing_imports = true

[mypy-IPython.*]
ignore_missing_imports = true

[mypy-importlib_metadata.*]
ignore_missing_imports = true

[mypy-importlib_resources.*]
ignore_missing_imports = true

[mypy-jupytext]
ignore_missing_imports = true

[mypy-mmh3]
ignore_missing_imports = true

[mypy-pickle5]
ignore_missing_imports = true

[mypy-pp]
ignore_missing_imports = true

[mypy-mkdocstrings.*]
ignore_missing_imports = true

[mypy-mkdocs.*]
ignore_missing_imports = true

[mypy-mkdocs_gen_files.*]
ignore_missing_imports = true

[mypy-mistune]
ignore_missing_imports = true

[mypy-networkx]
ignore_missing_imports = true

[mypy-orjson.*]
ignore_missing_imports = true

[mypy-pyarrow.*]
ignore_missing_imports = true

[mypy-pygraphviz]
ignore_missing_imports = true

[mypy-regex.*]
ignore_missing_imports = true

[mypy-structlog]
ignore_missing_imports = true

[mypy-rich_click.*]
ignore_missing_imports = true

[mypy-ruamel.*]
ignore_missing_imports = true

[mypy-sortedcontainers]
ignore_missing_imports = true

[mypy-stevedore]
ignore_missing_imports = true

[mypy-streamlit.*]
ignore_missing_imports = true

[mypy-textual.*]
ignore_missing_imports = true

[mypy-uvloop]
ignore_missing_imports = true

[mypy-uvicorn]
ignore_missing_imports = true
