;[options]
;packages = find_namespace:
;include_package_data = True
;package_dir =
;    =src
;zip_safe = False
;
;mkdocs.plugins =
;    frkl-docgen = kiara.doc:FrklDocumentationPlugin
;
;[options.packages.find]
;where = src
;exclude =
;    tests
;
;[aliases]
;build = bdist_wheel
;release = build upload
;
;[bdist_wheel]
;universal = 0
;
;[devpi:upload]
;no-vcs = 1
;formats = sdist, bdist_wheel
;
;[tool:pytest]
;addopts =
;    --verbose
;norecursedirs =
;    dist
;    build
;    .tox
;testpaths = tests

;[testenv]
;setenv =
;    PYTHONPATH = {toxinidir}
;deps =
;    -e{toxinidir}[dev_testing,all]
;install_command = pip install {opts} {packages}
;commands =
;    pip install -U pip
;    py.test --basetemp={envtmpdir}

;[coverage:run]
;branch = True
;source = kiara
;omit =
;    src/kiara/doc/*
;
;[coverage:paths]
;source =
;    src/
;    */site-packages/
;relative_files = true
;
;[coverage:report]
;exclude_lines =
;    pragma: no cover
;
;    def __repr__
;    if self\.debug
;
;    raise AssertionError
;    raise NotImplementedError
;
;    if 0:
;    if __name__ == .__main__.:
;    if typing.TYPE_CHECKING:
;    if kiara is None:
